hphp/hack/test/typecheck/nameof/parsing/nameof_pipe.php.exp
File "nameof_pipe.php", line 7, characters 12-21:
`nameof` can only be used with a class (Parsing[1002])
